# sodb

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
include/libsodb/: error.hpp  libsodb.hpp  pipe.hpp  process.hpp
src/: CMakeLists.txt  libsodb.cpp  pipe.cpp  process.cpp
test/: CMakeLists.txt  tests.cpp
tools/: CMakeLists.txt  sodb.cpp
